--- a/templates/details/failures.html.haml
+++ b/templates/details/failures.html.haml
@@ -1,3 +1,9 @@
+- jobs = failures.map(&:job_id).uniq.reject { |job| job == nil }
+- if jobs.count == 1
+  Job:
+  %a{href: "##{jobs.first}"}
+    = jobs.first
+
 %ul
   - failures.each do |failure|
     %li
@@ -9,6 +15,11 @@
           %pre
             %code
               = failure.details
+          - unless failure.job_id.nil? || jobs.count == 1
+            %p
+              Job:
+              %a{href: "##{failure.job_id}"}
+                = failure.job_id
       - else
         %code
           = failure.summary
