--- a/templates/details/failures.html.haml
+++ b/templates/details/failures.html.haml
@@ -1,24 +1,20 @@
-- jobs = failures.map(&:job_id).uniq.reject { |job| job == nil }
-- if jobs.count == 1
-  Job:
-  %a{href: "##{jobs.first}"}
-    = jobs.first
-
 %ul
   - failures.each do |failure|
     %li
-      - if failure.details
+      - if failure.details || failure.job_id
         %details
           %summary
             %code
               = failure.summary
-          %pre
-            %code
-              = failure.details
-          - unless failure.job_id.nil? || jobs.count == 1
+          - if failure.details
+            %pre
+              %code
+                = failure.details
+          - if failure.job_id
             %p
-              Job:
+              in
               %a{href: "##{failure.job_id}"}
+                job
                 = failure.job_id
       - else
         %code
