--- a/templates/details/failures.html.haml
+++ b/templates/details/failures.html.haml
@@ -6,19 +6,24 @@
           %summary
             %code
               = failure.summary
-          - if failure.message
-            %p
-              = failure.message
-          - if failure.details
-            %pre
-              %code
-                = failure.details
-          - if failure.job_id
-            %p
-              in
-              %a{href: "#job-component-#{failure.job_id}"}
-                job
-                = failure.job_id
+          %dl
+            - if failure.message
+              %dt Message
+              %dd
+                %pre
+                  %code
+                    = failure.message
+            - if failure.details
+              %dt Details
+              %dd
+                %pre
+                  %code
+                    = failure.details
+            - if failure.job_id
+              %dt Job
+              %dd
+                %a{href: "#job-component-#{failure.job_id}"}
+                  = failure.job_id
       - else
         %code
           = failure.summary
