Junit: Support `error` elements and include the message (#7)

--- a/templates/details/failures.html.haml
+++ b/templates/details/failures.html.haml
@@ -1,21 +1,29 @@
 %ul
   - failures.each do |failure|
     %li
-      - if failure.details || failure.job_id
+      - if failure.message || failure.details || failure.job_id
         %details
           %summary
             %code
               = failure.summary
-          - if failure.details
-            %pre
-              %code
-                = failure.details
-          - if failure.job_id
-            %p
-              in
-              %a{href: "#job-component-#{failure.job_id}"}
-                job
-                = failure.job_id
+          %dl
+            - if failure.message
+              %dt Message
+              %dd
+                %pre
+                  %code
+                    = failure.message
+            - if failure.details
+              %dt Details
+              %dd
+                %pre
+                  %code
+                    = failure.details
+            - if failure.job_id
+              %dt Job
+              %dd
+                %a{href: "#job-component-#{failure.job_id}"}
+                  = failure.job_id
       - else
         %code
           = failure.summary
