--- a/templates/truncater_exception.html.haml
+++ b/templates/truncater_exception.html.haml
@@ -1,9 +1,10 @@
-**ERROR** The annotation exceeded the maximum size and truncation optimization failed.
-Please report this error to
+**ANNOTATION ERROR** The annotation exceeded the maximum size and truncation optimization failed.
+This should never happen so if it has, please report it do
 %a{href: 'https://github.com/bugcrowd/test-summary-buildkite-plugin/issues'}
   https://github.com/bugcrowd/test-summary-buildkite-plugin/issues
 with the following diagnostic information:
 
+= '' # enforce a new line
 ```json
 != JSON.pretty_generate(diagnostics)
 ```
