--- a/templates/truncater_exception.html.haml
+++ b/templates/truncater_exception.html.haml
@@ -2,9 +2,4 @@
 This should never happen so if it has, please report it do
 %a{href: 'https://github.com/bugcrowd/test-summary-buildkite-plugin/issues'}
   https://github.com/bugcrowd/test-summary-buildkite-plugin/issues
-with the following diagnostic information:
-
-= '' # enforce a new line
-```json
-!= JSON.pretty_generate(diagnostics)
-```
+with the diagnostic information included in the log.
