Use correct links to jobs now that buildkite supports it

--- a/templates/details/failures.html.haml
+++ b/templates/details/failures.html.haml
@@ -22,7 +22,7 @@
             - if failure.job_id
               %dt Job
               %dd
-                %a{href: "#job-component-#{failure.job_id}"}
+                %a{href: "##{failure.job_id}"}
                   = failure.job_id
       - else
         %code
