--- a/templates/summary/failures.html.haml
+++ b/templates/summary/failures.html.haml
@@ -1,3 +1,7 @@
 %pre
   %code
     = failures.map(&:summary).join("\n")
+
+- if output_path
+  %a{href: "artifact://#{output_path}"}
+    See all failures
